Modified Sitemap Controller, Musician and Composition Services. Added Encryption Application.